--- a/memoryGame.html
+++ b/memoryGame.html
@@ -18,7 +18,7 @@
 
         <div>
             Choose number of cards:
-            <input type="number" id="nbrCards" min="4" max="12" placeholder="8">
+            <input type="number" id="nbrCards" min="4" max="8" step="2" value="8">
         </div><br><br>
         
         <div style="display: flex; justify-content: center; flex-direction: column; background-color: #ffffff83; padding: 40px; border-radius: 14px;" id="cardsBoard">
